[project]
name = "sdss-tree"
version = "5.0.0a1"
description = "Control and setup of SDSS tree environment and modules"
authors = [
    { name = "Brian Cherinka", email = "bcherinka@stsci.edu" },
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11,<4"

dependencies = [
    "rapidfuzz>=3.14.5",
    "sdsstools>=1.9.2",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "ipdb>=0.12.3",
    "ruff>=0.14.10",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=2.0.0",
    "nox>=2025.11.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.4.0",
    "sphinx-autodoc-typehints>=1.23.2",
    "sphinx_inline_tabs>=2025.12.21.14",
    "sphinx-argparse>=0.2.5",
    "sphinx-issues>=1.2.0"
]
test = [
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
]

[project.urls]
Homepage = "https://github.com/sdss/sdss-tree"
Repository = "https://github.com/sdss/sdss-tree"

[tool.uv]
package = true

[tool.ruff]
line-length = 99
target-version = 'py313'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["tree"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools"]

[tool.pytest.ini_options]
addopts = "--cov tree --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
include = ["src/tree/*"]
omit = ["*/utils/*.py", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover"
]

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tree"
module-root = "src"
